# webscrape

./: Temperature.txt  autologin.py  currencyrate.py  data.csv  nike_scrape.py  pyproject.toml  scrape.py  sneakers.txt  yahoostocks.py
